# parqlayground

./: README.md  examine_tables.py  hello.py  pyproject.toml
experiments/: set_up_queries.py  table_writers.py
tools/: pull_segmentation_cols.py  table_to_deltalake.py
