[project]
name = "parqlayground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "caveclient>=8.0.1",
    "cloud-volume>=12.8.0",
    "cloudpathlib>=0.23.0",
    "deltalake>=1.3.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "numpy>=2.4.1",
    "polars>=1.36.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "typer>=0.21.1",
]
